--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ openai>=1.45.0          # keep, or bump to 1.46+ and drop the httpx pin
 python-dotenv>=1.0.1
 httpx==0.27.0           # compatibility pin (remove if you upgrade openai)
 fpdf
+unidecode
